--- a/examples/example.html
+++ b/examples/example.html
@@ -2,11 +2,17 @@
     <head>
         <title>ComponentsJs examples</title>
         <meta charset="UTF-8"> 
-        <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">  
+        <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="../component-base.js"></script>
         <script src="example.js"></script>
     </head>
     <body>
-        <component type="Example"></component>
+        <component id="comp" type="Example"></component> 
+        <script>
+            document.addEventListener("ComponentsReady", function(){
+                document.getComponentById("comp").DisableSelect();
+            });
+        </script>
     </body>
 </html>
