--- a/examples/example_styles.html
+++ b/examples/example_styles.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8"> 
         <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../component-base.js"></script>
+        <script src="../component-base.min.js"></script>
         <script src="style_test.js"></script>
     </head> 
     <body>
